@@ -325,3 +325,6 @@
 	* Incremented the package version to 1.0.0.
 2017-07-17 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'Run Length' counters to the Edit Log dialog.
+2017-07-17 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/rdlogeditb/runlengthwidget.cpp' that caused
+	a segfault when processing a log with no selected items.
